# crewai-hot-take-demo

./: .gitignore  README.md
hot_take/: pyproject.toml
hot_take/src/hot_take/: crew.py  main.py
hot_take/src/hot_take/config/: agents.yaml  tasks.yaml
