[project]
name = "hot_take"
version = "0.1.0"
description = "hot-take using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
hot_take = "hot_take.main:run"
run_crew = "hot_take.main:run"
train = "hot_take.main:train"
replay = "hot_take.main:replay"
test = "hot_take.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
